@@ -12,6 +12,7 @@ const run = ({messageText, sendMessage}) => {
 
 const patchNotes = 
 	'2019/12/24\n' +
+	'• Added dice rolling command.\n' +
 	'• Added taboo and untaboo commands.\n' +
 	'2019/12/18\n' +
 	'• Added echo command.\n' +
