@@ -1,4 +1,5 @@
 2019/12/24:
+• Added dice rolling command.
 • Added taboo and untaboo commands.
 2019/12/18:
 • Added echo command.
